# emulator

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  index.js
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: rust.yml
compiler/: Cargo.toml
compiler/src/: ast.rs  codegen.rs  font.rs  lexer.rs  lib.rs  main.rs  parser.rs  resolver.rs  rom.rs
docs/: walkthrough.md
docs-site/: PUSHPIN.yaml
docs-site/pages/docs/: builtins.md  examples.md  getting-started.md  index.md  syntax.md  tiles.md  types.md
docs-site/templates/: docs.html
games/: anim.s  hello.s  iso.s  platformer.s  pong.s  rpg.s  walker.s
scripts/: deploy.sh
src/: apu.rs  cpu.rs  gpu.rs  instructions.rs  lib.rs  main.rs  memory.rs  processor.rs
web/: compiler.js  compiler_bg.wasm  index.html  index.js
