[workspace]
members = [".", "compiler"]
resolver = "2"

[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rand = "0.8"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'HtmlCanvasElement',
  'ImageData',
  'Window',
  'KeyboardEvent',
]

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sdl2 = "0.35"
libc = "0.2"
